fixed headerboard visibility switching bug

--- a/src/popup.css
+++ b/src/popup.css
@@ -4,6 +4,10 @@
     z-index: 999999;
 }
 
+.hidden {
+    display: none;
+}
+
 #tagarea {
     display: none;
     position: relative;
